# isaac-rl-quad-humanoid

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/source/go2/: recovery_sim.webm
quad_humanoid_envs/: __init__.py
quad_humanoid_envs/g1/: __init__.py
quad_humanoid_envs/g1/locomanip/: __init__.py  env_cfg.py  env_cfg_ee.py  mdp.py  robots.py
quad_humanoid_envs/g1/locomanip/agents/: __init__.py  ppo_cfg.py  ppo_cfg_ee.py  symmetry.py  symmetry_ee.py
quad_humanoid_envs/g1/wholebody/: __init__.py  actions.py  env_cfg.py  robots.py
quad_humanoid_envs/g1/wholebody/agents/: __init__.py  ppo_cfg.py  symmetry.py
quad_humanoid_envs/g1/wholebody/controllers/: __init__.py  ik_controller.py  il_controller.py
quad_humanoid_envs/go2/: __init__.py
quad_humanoid_envs/go2/recovery/: env_cfg.py  mdp.py
quad_humanoid_envs/go2/recovery/agents/: __init__.py  ppo_cfg.py  symmetry.py
quad_humanoid_envs/go2/velocity/: env_cfg.py  mdp.py
quad_humanoid_envs/go2/velocity/agents/: ppo_cfg.py  symmetry.py
scripts/: play.py  train.py
scripts/reinforcement_learning/rsl_rl/: play_anymal_keyboard.py  play_go2_keyboard.py
source/isaaclab_assets/isaaclab_assets/robots/: unitree.py
source/isaaclab_rl/isaaclab_rl/rsl_rl/: exporter.py
source/isaaclab_tasks/isaaclab_tasks/manager_based/loco_manipulation/: __init__.py
source/isaaclab_tasks/isaaclab_tasks/manager_based/locomotion/recovery/: __init__.py  recovery_env_cfg.py
source/isaaclab_tasks/isaaclab_tasks/manager_based/whole_body_control/: __init__.py
(+66 files in other folders)
